solucionado problema de web

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": "https://rozavpomaz.github.io/useStateReact",
   "name": "semana16react",
   "private": true,
   "version": "0.0.0",
